# klaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  lib.rs  mock.rs  reliability.rs  scheduler.rs
crates/core/tests/: runtime_e2e.rs
docs/: README.md  (+1 more)
klaw-acp/: CHANGELOG.md  Cargo.toml  README.md
klaw-acp/src/: client.rs  hub.rs  lib.rs  manager.rs  runtime.rs
klaw-agent/: CHANGELOG.md  Cargo.toml  README.md
klaw-agent/src/: context_compression.rs  lib.rs
klaw-approval/: CHANGELOG.md  Cargo.toml  README.md
klaw-approval/src/: error.rs  lib.rs  manager.rs
klaw-archive/: CHANGELOG.md  Cargo.toml  README.md
klaw-archive/src/: error.rs  fs_store.rs  lib.rs  model.rs  service.rs  sniff.rs
klaw-channel/: CHANGELOG.md  Cargo.toml  README.md
klaw-channel/src/: dingtalk.rs  im_card.rs  lib.rs  manager.rs  media.rs  outbound.rs  render.rs  stdio.rs  telegram.rs  terminal.rs  websocket.rs
klaw-channel/src/dingtalk/: attachments.rs  client.rs  config.rs  error.rs  mod.rs  parsing.rs  tests.rs
klaw-channel/src/telegram/: client.rs  mod.rs  render.rs  types.rs
klaw-cli/: CHANGELOG.md  Cargo.toml  README.md
klaw-cli/src/: env_check.rs  main.rs
klaw-cli/src/commands/: agent.rs  archive.rs  config.rs  daemon.rs  dingtalk_runtime.rs  gateway.rs  gui.rs  mod.rs  runtime.rs  service_loop.rs  session.rs  signal.rs  startup_display.rs  stdio.rs  tui.rs
klaw-cli/src/runtime/: env_check.rs  gateway_manager.rs  mod.rs  service_loop.rs  webhook.rs
klaw-cli/tests/: runtime_facade.rs
klaw-config/: CHANGELOG.md  Cargo.toml  README.md
klaw-config/src/: io.rs  lib.rs  tests.rs  validate.rs
klaw-core/: CHANGELOG.md  Cargo.toml  README.md
klaw-core/src/: agent_loop.rs  domain.rs  lib.rs  media.rs  mock.rs  observability.rs  prompt.rs  protocol.rs  reliability.rs  scheduler.rs  transport.rs
klaw-core/src/agent/: agent_loop.rs  mod.rs
klaw-core/templates/prompt/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
klaw-core/tests/: runtime_e2e.rs
klaw-cron/: CHANGELOG.md  Cargo.toml  README.md
klaw-cron/src/: error.rs  lib.rs  manager.rs  schedule.rs  tests.rs  time.rs  worker.rs
klaw-gateway/: CHANGELOG.md  Cargo.toml  README.md
klaw-gateway/examples/: archive_upload.rs  webhook_agents_request.rs  webhook_request.rs
klaw-gateway/src/: archive.rs  auth.rs  chat_page.rs  embedded.rs  error.rs  handlers.rs  home.rs  lib.rs  protocol.rs  providers.rs  routes.rs  runtime.rs  state.rs  tailscale.rs  tests.rs  webhook.rs  websocket.rs
klaw-gateway/static/: index.html
klaw-gateway/static/chat/: index.html
klaw-gateway/tests/: protocol_v1.rs
klaw-gui/: CHANGELOG.md  Cargo.toml  README.md  build.rs
klaw-gui/assets/icons/: logo.icns  openai.icns
klaw-gui/src/: autostart.rs  icon.rs  lib.rs  notifications.rs  release_check.rs  runtime_bridge.rs  settings.rs  sync_runtime.rs  theme.rs  time_format.rs  tray.rs  voice_test.rs
klaw-gui/src/app/: mod.rs
klaw-gui/src/domain/: menu.rs
klaw-gui/src/panels/: acp.rs  analyze_dashboard.rs  approval.rs  archive.rs  channel.rs  configuration.rs  cron.rs  gateway.rs  heartbeat.rs  knowledge.rs  llm.rs  local_models.rs  logs.rs  mcp.rs  memory.rs  mod.rs  monitor.rs  observability.rs  profile.rs  provider.rs  session.rs  setting.rs  skill.rs  skill_manage.rs  skill_manager.rs  skills_manager.rs  skills_registry.rs  system.rs  system_monitor.rs  terminal.rs  tool.rs  voice.rs  webhook.rs
klaw-gui/src/state/: mod.rs  persistence.rs  workbench.rs
klaw-heartbeat/: CHANGELOG.md  Cargo.toml  README.md
klaw-heartbeat/src/: lib.rs
klaw-knowledge/: CHANGELOG.md  Cargo.toml  README.md
klaw-knowledge/src/: context.rs  error.rs  lib.rs  provider_router.rs  types.rs
klaw-llm/: CHANGELOG.md  Cargo.toml  README.md
klaw-llm/src/: estimate.rs  lib.rs
klaw-mcp/: CHANGELOG.md  Cargo.toml  README.md
klaw-mcp/src/: client.rs  hub.rs  lib.rs  manager.rs  runtime.rs
klaw-memory/: CHANGELOG.md  Cargo.toml  README.md
klaw-memory/src/: error.rs  governance.rs  lib.rs  maintenance.rs  prompt.rs  provider.rs  service.rs  stats.rs  tests.rs  types.rs  util.rs
klaw-model/: CHANGELOG.md  Cargo.toml  README.md
klaw-model/src/: catalog.rs  download.rs  error.rs  lib.rs  llama_cpp.rs  manifest.rs  service.rs  storage.rs  types.rs
klaw-observability/: CHANGELOG.md  Cargo.toml  README.md
klaw-observability/src/: audit.rs  config.rs  health.rs  lib.rs  local_store.rs  metrics.rs  telemetry.rs  tracing_ext.rs
klaw-runtime/: CHANGELOG.md  Cargo.toml  README.md
klaw-runtime/src/: env_check.rs  gateway_manager.rs  gateway_websocket.rs  knowledge_runtime.rs  lib.rs  service_loop.rs  webhook.rs
klaw-session/: CHANGELOG.md  Cargo.toml  README.md
klaw-session/src/: error.rs  lib.rs  manager.rs
klaw-skill/: CHANGELOG.md  Cargo.toml  README.md
klaw-skill/src/: error.rs  fetcher.rs  fs_store.rs  lib.rs  model.rs  store.rs
klaw-storage/: CHANGELOG.md  Cargo.toml  README.md
klaw-storage/src/: backup.rs  database_executor.rs  error.rs  jsonl.rs  lib.rs  memory_db.rs  paths.rs  traits.rs  types.rs  util.rs
klaw-tool/: CHANGELOG.md  Cargo.toml  README.md
klaw-tool/src/: apply_patch.rs  approval.rs  archive.rs  ask_question.rs  channel_attachment.rs  cron_manager.rs  file_read.rs  fs.rs  geo.rs  heartbeat_manager.rs  knowledge.rs  lib.rs  local_search.rs  memory.rs  shell.rs  skills_manager.rs  skills_registry.rs  sub_agent.rs  terminal_multiplexers.rs  voice.rs  web_fetch.rs  web_search.rs
klaw-tui/: Cargo.toml
klaw-tui/src/: app.rs  event.rs  lib.rs  state.rs  view.rs
klaw-tui/tests/: app_state.rs
klaw-ui-kit/: CHANGELOG.md  Cargo.toml  README.md
klaw-ui-kit/src/: fonts.rs  foundation.rs  lib.rs  notifications.rs  text_animator.rs  theme.rs  toggle.rs
klaw-voice/: CHANGELOG.md  Cargo.toml  README.md
klaw-voice/src/: error.rs  lib.rs  model.rs  provider.rs  service.rs  stream.rs
klaw-webui/: CHANGELOG.md  Cargo.toml  README.md
klaw-webui/src/: lib.rs  presentation.rs  web_chat.rs
(+225 files in other folders)
