[workspace]
members = [
    "klaw-agent",
    "klaw-core",
    "klaw-llm",
    "klaw-tool",
    "klaw-heartbeat",
    "klaw-config",
    "klaw-cli", 
    "klaw-mcp", 
    "klaw-skill", 
    "klaw-memory", 
    "klaw-cron", 
    "klaw-storage", 
    "klaw-gateway", "klaw-channel",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
turso = { version = "0.4.3"}

zellij-client = { version = "0.43.1"}

klaw-core = { path = "klaw-core" }
klaw-llm = { path = "klaw-llm" }
klaw-tool = { path = "klaw-tool" }
klaw-heartbeat = { path = "klaw-heartbeat" }
klaw-config = { path = "klaw-config" }
klaw-agent = { path = "klaw-agent" }
klaw-storage = { path = "klaw-storage" }
klaw-memory = { path = "klaw-memory" }
klaw-cron = { path = "klaw-cron" }
klaw-skill = { path = "klaw-skill" }
klaw-mcp = { path = "klaw-mcp" }
klaw-gateway = { path = "klaw-gateway" }
klaw-channel = { path = "klaw-channel" }
