[workspace]
members = [
    "klaw-agent",
    "klaw-approval",
    "klaw-archive",
    "klaw-core",
    "klaw-llm",
    "klaw-tool",
    "klaw-heartbeat",
    "klaw-config",
    "klaw-cli",
    "klaw-mcp",
    "klaw-skill",
    "klaw-memory",
    "klaw-cron",
    "klaw-session",
    "klaw-storage",
    "klaw-gateway", "klaw-channel",
    "klaw-gui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "signal"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
rustls = "0.23"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
turso = { version = "0.4.3"}
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
egui = "0.33.3"
eframe = "0.33.3"
egui-file-dialog = "0.12.0"
egui-phosphor = "0.11.0"
egui_extras = "0.33.3"
egui-notify = "0.21.0"
tray-icon = "0.19"
fontdb = "0.16"
sysinfo = "0.37"
image = { version = "0.25.10", default-features = false, features = ["tiff"] }
objc2-app-kit = "0.2.2"
objc2-foundation = "0.2.2"
objc2 = "0.5.2"

humantime = "2"
url = "2"
chrono = "0.4"
cron = "0.15"
ipnet = "2"

klaw-core = { path = "klaw-core" }
klaw-approval = { path = "klaw-approval" }
klaw-archive = { path = "klaw-archive" }
klaw-llm = { path = "klaw-llm" }
klaw-tool = { path = "klaw-tool" }
klaw-heartbeat = { path = "klaw-heartbeat" }
klaw-config = { path = "klaw-config" }
klaw-agent = { path = "klaw-agent" }
klaw-storage = { path = "klaw-storage" }
klaw-memory = { path = "klaw-memory" }
klaw-cron = { path = "klaw-cron" }
klaw-session = { path = "klaw-session" }
klaw-skill = { path = "klaw-skill" }
klaw-mcp = { path = "klaw-mcp" }
klaw-gateway = { path = "klaw-gateway" }
klaw-channel = { path = "klaw-channel" }
klaw-gui = { path = "klaw-gui" }
