[workspace]
members = [
    "klaw-acp",
    "klaw-agent",
    "klaw-approval",
    "klaw-archive",
    "klaw-voice",
    "klaw-core",
    "klaw-util",
    "klaw-llm",
    "klaw-tool",
    "klaw-heartbeat",
    "klaw-config",
    "klaw-cli",
    "klaw-mcp",
    "klaw-skill",
    "klaw-memory",
    "klaw-cron",
    "klaw-session",
    "klaw-storage",
    "klaw-gateway",
    "klaw-channel",
    "klaw-gui",
    "klaw-observability",
    "klaw-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.10.2"

[workspace.dependencies]
agent-client-protocol = "0.10.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
rustls = "0.23"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"] }
bytes = "1"
tokio-stream = "0.1"
opendal = { version = "0.52", default-features = false, features = ["services-s3"] }
tokenizers = "0.22.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
turso = { version = "0.4.3"}
time = { version = "0.3", features = ["formatting"] }
iana-time-zone = "0.1.65"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
egui = "0.33.3"
eframe = "0.33.3"
egui_term = { git = "https://github.com/Harzu/egui_term", rev = "ececa84ef6d228036b89b93b10979c17017dcfa0" }
egui_commonmark = { version = "0.22.0", default-features = false, features = ["pulldown_cmark"] }
egui_json_tree = "0.14.2"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
egui-file-dialog = "0.12.0"
egui-phosphor = "0.11.0"
egui_extras = "0.33.3"
egui-notify = "0.21.0"
egui_plot = { git = "https://github.com/emilk/egui_plot", rev = "445273e7edbb338d300b0e9e6c351d003f37a5a8" }
tray-icon = "0.19"
fontdb = "0.16"
sysinfo = "0.37"
image = { version = "0.25.10", default-features = false, features = ["tiff"] }
objc2-app-kit = "0.2.2"
objc2-foundation = "0.2.2"
objc2 = "0.5.2"
objc2-core-location = "0.2.2"

humantime = "2"
url = "2"
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.15"
ipnet = "2"
globset = "0.4"
walkdir = "2"
tar = "0.4"
zstd = "0.13"
hostname = "0.4"
regex = "1"
semver = "1"
vergen = "9.1.0"
vergen-gitcl = "9.1.0"

opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "trace", "grpc-tonic"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
tracing-opentelemetry = "0.28"
cpal = "0.16"
hound = "3.5"
rodio = "0.20"

klaw-acp = { path = "klaw-acp" }
klaw-core = { path = "klaw-core" }
klaw-approval = { path = "klaw-approval" }
klaw-archive = { path = "klaw-archive" }
klaw-voice = { path = "klaw-voice" }
klaw-util = { path = "klaw-util" }
klaw-llm = { path = "klaw-llm" }
klaw-tool = { path = "klaw-tool" }
klaw-heartbeat = { path = "klaw-heartbeat" }
klaw-config = { path = "klaw-config" }
klaw-agent = { path = "klaw-agent" }
klaw-storage = { path = "klaw-storage" }
klaw-memory = { path = "klaw-memory" }
klaw-cron = { path = "klaw-cron" }
klaw-session = { path = "klaw-session" }
klaw-skill = { path = "klaw-skill" }
klaw-mcp = { path = "klaw-mcp" }
klaw-gateway = { path = "klaw-gateway" }
klaw-channel = { path = "klaw-channel" }
klaw-gui = { path = "klaw-gui" }
klaw-observability = { path = "klaw-observability" }
klaw-runtime = { path = "klaw-runtime" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
