[package]
name = "klaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
time = { workspace = true }
klaw-config = { workspace = true }
klaw-llm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
