[package]
name = "klaw-archive"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
klaw-core = { workspace = true }
klaw-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
uuid = { workspace = true }
