[package]
name = "klaw-channel"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std", "net", "signal", "time"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
klaw-core = { workspace = true }
klaw-archive = { workspace = true }
klaw-config = { workspace = true }
klaw-voice = { workspace = true }
klaw-util = { workspace = true }
