[package]
name = "klaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "klaw"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
klaw-core = { workspace = true }
klaw-agent = { workspace = true }
klaw-llm = { workspace = true }
klaw-tool = { workspace = true }
klaw-heartbeat = { workspace = true }
klaw-config = { workspace = true }
klaw-storage = { workspace = true }
klaw-cron = { workspace = true }
klaw-skill = { workspace = true }
klaw-mcp = { workspace = true }
klaw-gateway = { workspace = true }
klaw-channel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
