[package]
name = "klaw-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
humantime = { workspace = true }
url = { workspace = true }
klaw-util = { workspace = true }
