[package]
name = "klaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
klaw-llm = { workspace = true }
klaw-tool = { workspace = true }
klaw-agent = { workspace = true }
klaw-util = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
klaw-llm = { workspace = true }
klaw-tool = { workspace = true }
