[package]
name = "klaw-cron"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true }
cron = { workspace = true }
humantime = { workspace = true }
klaw-core.workspace = true
klaw-storage.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
