[package]
name = "klaw-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
futures-util = { workspace = true }
klaw-config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "sync"] }
tracing = { workspace = true }
