[package]
name = "klaw-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
klaw-config = { workspace = true }
klaw-observability = { workspace = true }
klaw-util = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "sync"] }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
