[package]
name = "klaw-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui-phosphor = { workspace = true }
egui_extras = { workspace = true }
egui-notify = { workspace = true }
fontdb = { workspace = true }
klaw-config = { workspace = true }
klaw-archive = { workspace = true }
klaw-cron = { workspace = true }
klaw-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
