[package]
name = "klaw-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui-file-dialog = { workspace = true }
egui-phosphor = { workspace = true }
egui_extras = { workspace = true }
egui-notify = { workspace = true }
fontdb = { workspace = true }
klaw-config = { workspace = true }
klaw-approval = { workspace = true }
klaw-archive = { workspace = true }
klaw-cron = { workspace = true }
klaw-memory = { workspace = true }
klaw-session = { workspace = true }
klaw-skill = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
image = { workspace = true }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSApplication", "NSImage"] }
objc2-foundation = { workspace = true, features = ["NSData", "NSString"] }
