[package]
name = "klaw-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_term = { workspace = true }
egui_commonmark = { workspace = true }
egui_json_tree = { workspace = true }
egui-file-dialog = { workspace = true }
egui-phosphor = { workspace = true }
egui_extras = { workspace = true, features = ["chrono"] }
egui_plot = { workspace = true }
klaw-config = { workspace = true }
klaw-channel = { workspace = true }
klaw-core = { workspace = true }
klaw-llm = { workspace = true }
klaw-approval = { workspace = true }
klaw-archive = { workspace = true }
klaw-acp = { workspace = true }
klaw-cron = { workspace = true }
klaw-gateway = { workspace = true }
klaw-heartbeat = { workspace = true }
klaw-knowledge = { workspace = true }
klaw-mcp = { workspace = true }
klaw-memory = { workspace = true }
klaw-model = { workspace = true }
klaw-observability = { workspace = true }
klaw-runtime = { workspace = true }
klaw-session = { workspace = true }
klaw-skill = { workspace = true }
klaw-storage = { workspace = true }
klaw-ui-kit = { workspace = true }
klaw-voice = { workspace = true }
klaw-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
puffin = { workspace = true }
puffin_egui = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
tray-icon = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
rodio = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
image = { workspace = true, features = ["png", "jpeg", "webp", "gif", "bmp", "ico"] }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSApplication", "NSImage"] }
objc2-foundation = { workspace = true, features = ["NSData", "NSString"] }
objc2-core-location = { workspace = true, features = ["CLLocationManager"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
image = { workspace = true, features = ["png", "jpeg", "webp", "gif", "bmp", "ico"] }

[build-dependencies]
vergen = { workspace = true }
vergen-gitcl = { workspace = true }
