[package]
name = "klaw-heartbeat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
klaw-config = { workspace = true }
klaw-storage = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
