[package]
name = "klaw-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }
regex = { workspace = true }
strsim = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
ignore = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tracing = { workspace = true }
klaw-storage = { workspace = true }
klaw-config = { workspace = true }
klaw-model = { workspace = true }
