[package]
name = "klaw-llm"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
klaw-util = { workspace = true }
