[package]
name = "klaw-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
klaw-config.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "sync", "time"] }
tracing.workspace = true
