[package]
name = "klaw-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "sync"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
klaw-config = { workspace = true }
klaw-util = { workspace = true }
llama-cpp-2 = { workspace = true }
llama-cpp-sys-2 = { workspace = true }
encoding_rs = { workspace = true }
tracing = { workspace = true }
