[package]
name = "klaw-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
tracing-opentelemetry = { workspace = true }
time = { workspace = true }
axum = { workspace = true }
klaw-core = { workspace = true }