[package]
name = "klaw-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
klaw-acp = { workspace = true }
async-trait = { workspace = true }
klaw-core = { workspace = true }
klaw-agent = { workspace = true }
klaw-llm = { workspace = true }
klaw-tool = { workspace = true }
klaw-approval = { workspace = true }
klaw-archive = { workspace = true }
klaw-voice = { workspace = true }
klaw-heartbeat = { workspace = true }
klaw-config = { workspace = true }
klaw-session = { workspace = true }
klaw-storage = { workspace = true }
klaw-cron = { workspace = true }
klaw-skill = { workspace = true }
klaw-mcp = { workspace = true }
klaw-gateway = { workspace = true }
klaw-channel = { workspace = true }
klaw-observability = { workspace = true }
klaw-memory = { workspace = true }
klaw-knowledge = { workspace = true }
klaw-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
