[package]
name = "klaw-skill"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
reqwest.workspace = true
