[package]
name = "klaw-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "net"] }
zellij-client = { workspace = true }
klaw-config = { workspace = true }
klaw-agent = { workspace = true }
klaw-llm = { workspace = true }
klaw-memory = { workspace = true }
klaw-storage = { workspace = true }
klaw-skill = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }
reqwest.workspace = true
ipnet = { workspace = true }
tracing.workspace = true
sha2.workspace = true
time.workspace = true
