[package]
name = "klaw-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "net"] }
klaw-config = { workspace = true }
klaw-agent = { workspace = true }
klaw-llm = { workspace = true }
klaw-approval = { workspace = true }
klaw-archive = { workspace = true }
klaw-voice = { workspace = true }
klaw-memory = { workspace = true }
klaw-storage = { workspace = true }
klaw-skill = { workspace = true }
klaw-util = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
reqwest.workspace = true
ipnet = { workspace = true }
tracing.workspace = true
sha2.workspace = true
time.workspace = true
globset.workspace = true
walkdir.workspace = true
regex.workspace = true
