[package]
name = "klaw-ui-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared UI foundation for klaw-gui and klaw-webui"

[dependencies]
egui = { workspace = true }
egui-phosphor = { workspace = true }
egui-notify = { workspace = true }
egui-twemoji = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fontdb = { workspace = true }
