[package]
name = "klaw-ui-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared UI foundation for klaw-gui and klaw-webui"

[features]
default = ["fonts-lxgw"]
fonts-lxgw = []
fonts-noto-sans = []

[dependencies]
egui = { workspace = true }
egui-phosphor = { workspace = true }
egui-notify = { workspace = true }
egui-theme-switch = { workspace = true }
egui-twemoji = { workspace = true }
eframe = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fontdb = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
