[package]
name = "klaw-webui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui chat UI for Klaw gateway (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
klaw-ui-kit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
console_error_panic_hook = { workspace = true }
# eframe needs a different feature set than desktop `klaw-gui`; cannot inherit workspace eframe.
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = { version = "0.33.3", default-features = false, features = ["default_fonts"] }
egui_extras = { version = "0.33.3", default-features = false, features = ["image", "http"] }
ehttp = { workspace = true }
egui_commonmark = { workspace = true }
egui-phosphor = { workspace = true }
egui-notify = { workspace = true }
js-sys = { workspace = true }
urlencoding = { workspace = true }
# Enable `wgpu`'s `web` backend for `egui-wgpu` on wasm (same version as eframe).
wgpu = { version = "27.0.1", default-features = false, features = ["webgpu", "webgl", "wgsl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "CloseEvent",
    "ErrorEvent",
    "Location",
    "MessageEvent",
    "Storage",
    "WebSocket",
    "Window",
] }
