[package]
name = "klaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
klaw-core.workspace = true
klaw-llm.workspace = true
klaw-tool.workspace = true
klaw-config.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
